RESOLVED FIXED91243
[WIN] Fix compilation of JSGlobalData.h with ENABLE(DFG_JIT)
https://bugs.webkit.org/show_bug.cgi?id=91243
Summary [WIN] Fix compilation of JSGlobalData.h with ENABLE(DFG_JIT)
Patrick R. Gansterer
Reported 2012-07-13 07:36:35 PDT
[WIN] Fix compilation of JSGlobalData.h with ENABLE(DFG_JIT)
Attachments
Patch (1.39 KB, patch)
2012-07-13 07:39 PDT, Patrick R. Gansterer
ggaren: review-
buildbot: commit-queue-
Patch (1.45 KB, patch)
2012-07-13 09:23 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2012-07-13 07:39:43 PDT
Build Bot
Comment 2 2012-07-13 08:09:36 PDT
Early Warning System Bot
Comment 3 2012-07-13 08:35:25 PDT
Early Warning System Bot
Comment 4 2012-07-13 08:41:49 PDT
Geoffrey Garen
Comment 5 2012-07-13 08:50:32 PDT
Comment on attachment 152259 [details] Patch Looks like you need #ifdefs around the #pragma.
Patrick R. Gansterer
Comment 6 2012-07-13 09:23:07 PDT
Created attachment 152277 [details] Patch (In reply to comment #5) > (From update of attachment 152259 [details]) > Looks like you need #ifdefs around the #pragma. Yup. Added.
Patrick R. Gansterer
Comment 7 2012-07-19 01:04:53 PDT
ping?
Geoffrey Garen
Comment 8 2012-07-19 11:00:45 PDT
Comment on attachment 152277 [details] Patch r=me
WebKit Review Bot
Comment 9 2012-07-19 11:21:06 PDT
Comment on attachment 152277 [details] Patch Clearing flags on attachment: 152277 Committed r123125: <http://trac.webkit.org/changeset/123125>
WebKit Review Bot
Comment 10 2012-07-19 11:21:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.