[WIN] Fix compilation of JSGlobalData.h with ENABLE(DFG_JIT) https://bugs.webkit.org/show_bug.cgi?id=91243

Reviewed by Geoffrey Garen.

Disable MSVC warning 4200 "zero-sized array in struct/union" for JSC::ScratchBuffer.

* runtime/JSGlobalData.h:
(JSC):


Canonical link: https://commits.webkit.org/109583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123125 268f45cc-cd09-0410-ab3c-d52691b4dbfc